# plugin-system

./: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  EventManager.cpp  EventManager.h  Publisher.cpp  Publisher.h
main/: CMakeLists.txt  Event.h  EventListener.h  EventManager.h  Player.h  main.cpp
main/inlcude/: EventManager.h
outlib/: Event.h  EventListener.cpp  EventManager.cpp  Player.cpp  Publisher.cpp
predictor/: CMakeLists.txt  Player.h  Predictor.cpp  Predictor.h  Publisher.h
predictor/src/: CMakeLists.txt
